--- a/VueTest/package.json
+++ b/VueTest/package.json
@@ -6,9 +6,11 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "backend" : "json-server --watch db.json --port 3000"
   },
   "dependencies": {
+    "json-server": "^0.17.1",
     "vue": "^3.2.45"
   },
   "devDependencies": {
